# webHostingProject

.github/workflows/: ci-cd.yml
infrastructure/: Caddyfile  docker-compose.yml  nginx-static.conf
projects/static-site-hosting/: pyproject.toml  pytest.ini
projects/static-site-hosting/app/: database.py  database_init.py  main.py
projects/static-site-hosting/app/auth/: dependencies.py  jwt.py  redis.py
projects/static-site-hosting/app/core/: config.py
projects/static-site-hosting/app/models/: calculation.py  user.py
projects/static-site-hosting/app/operations/: __init__.py
projects/static-site-hosting/app/schemas/: base.py  calculation.py  token.py  user.py
projects/static-site-hosting/public/: index.html
projects/static-site-hosting/tests/: conftest.py
projects/static-site-hosting/tests/e2e/: conftest.py  test_fastapi_calculator.py
projects/static-site-hosting/tests/integration/: conftest.py  test_user.py  test_user_auth.py
projects/static-site-hosting/tests/unit/: conftest.py  test_calculator.py
